# Crow

./: .gitignore  GUIDE.md  MANIFEST.in  README.md  SKILL.md  pyproject.toml  setup.py
.omg/state/: learn-watch.json  quota-watch.json
crow/: cli.py  commands.py  core.py  safeguards.py  shell.py  utils.py  watchout.py
crow/tui/: app.py  utils.py
crow/tui/widgets/: file_panel.py  sidebar.py
