[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crow"
version = "1.4.0"
authors = [
    {name = "Letter Doormagedust", email = "letterdoormagedust@gmail.com"}
]
description = "FTP harness for AI assistants (Claude Code, Gemini CLI, etc.)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "textual",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
crow = "crow.cli:main"

[tool.setuptools]
packages = ["crow", "crow.tui"]
